--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,1 +1,2 @@
-{'ver1':'103', 'ver2':'1', 'ver3':'\n[إضافة] ميزة رسالة جماعية لمجموعات\n[إضافة] ميزة تغيير مدة بقاء ومكان إشعار(شاهد حالتك \ غير صورته الشخصية) إما اعلى او وسط او اسفل الشاشة\n[إضافة]ميزة تغيير لون خط وخلفية إشعار(شاهد حالتك \ غير صورته الشخصية)\n[إضافة] ميزة معرفة الشخص المشرف بالمجموعة من خلال عرض كلمة مشرف بجانب رقمه في شاشة المحادثة\n[إضافة] ميزة إضهار صورتك بالواتساب بجانب كلمة ZEWhatsApp أعلى الشاشة\n[إضافة] ميزة مؤثرات التنقل بالشاشة الرئيسية\n' , 'dli':'https://www.whats-plus.net/2022/03/blog-post_18.html'}
+{'ver1':'104', 'ver2':'1', 'ver3':'\n[حصريا] حصريا رموز تعبيرية مخصصة بنقرة مزدوجة لكل دردشة (شاشة المحادثة> 3 نقاط)
+\n[إضافة] إظهار إشعار للمكالمات المحظورة عند تفعيل خصوصية المكالمات\n[إضافة]خيار لتعطيل النقر المزدوج للإعجاب\n[إضافة] ايقونة جانب اسم صاحب المجموعة لمعرفة صاحب المجموعة\n[إضافة]  الشريط العلوي يختفي في واجهة مستخدم الاساسية أعلى الشاشة\n[إضافة] لون أيقونة الصوت / الفيديو في شاشة المكالمات\n' , 'dli':'https://www.whats-plus.net/2022/03/blog-post_18.html'}
