--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,1 +1,1 @@
-{'ver1':'104', 'ver2':'1', 'ver3':'\n[إضافة] ميزة رسالة جماعية لمجموعات\n[إضافة] ميزة تغيير مدة بقاء ومكان إشعار(شاهد حالتك \ غير صورته الشخصية) إما اعلى او وسط او اسفل الشاشة\n[إضافة]ميزة تغيير لون خط وخلفية إشعار(شاهد حالتك \ غير صورته الشخصية)\n[إضافة] ميزة معرفة الشخص المشرف بالمجموعة من خلال عرض كلمة مشرف بجانب رقمه في شاشة المحادثة\n[إضافة] ميزة إضهار صورتك بالواتساب بجانب كلمة ZEWhatsApp أعلى الشاشة\n[إضافة] ميزة مؤثرات التنقل بالشاشة الرئيسية\n' , 'dli':'https://www.whats-plus.net/2022/03/blog-post_18.html'}
+{'ver1':'103', 'ver2':'2', 'ver3':'\n[متابعة قناة تيليجرام للحصول على تحديثات اول با اول]\n[ 'dli':'https://t.me/zemods'}
