--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,1 +1,1 @@
-{'ver1':'103', 'ver2':'2', 'ver3':'\n[متابعة قناة تيليجرام للحصول على تحديثات اول با اول]\n[ 'dli':'https://t.me/zemods'}
+{'ver1':'8', 'ver2':'105', 'ver3':'\n[حصرياً] رموز تعبيرية مخصصة بنقرة مزدوجة لكل دردشة (شاشة المحادثة> 3 نقاط).\n[إضافة] إظهار إشعار للمكالمات المحظورة عند تفعيل خصوصية المكالمات.\n[إضافة] خيار لتعطيل النقر المزدوج للإعجاب.\n[إضافة] ايقونة جانب اسم صاحب المجموعة لمعرفة صاحب المجموعة.\n[إصلاح] الشريط العلوي يختفي في واجهة مستخدم الاساسية.\n[إصلاح] لون أيقونة الصوت / الفيديو في شاشة المكالمات.\n[إصلاح] بعض الترجمة العربية.\n[إصلاح] إصلاحات وتحسينات أخرى.\n' , 'dli':'https://www.whats-plus.net/2022/03/blog-post_18.html'}
