--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,1 +1,1 @@
-{'ver1':'108', 'ver2':'1', 'ver3':'\nطھط­ط¯ظٹط« ظ‚ط§ط¹ط¯ ظˆط§طھط³ط§ط¨ ط§ظ„ظ‰ 2.22.17.76.\n{ط¥ط¶ط§ظپط©}ط§ط³طھط·ظ„ط§ط¹ ط§ظ„ط±ط£ظٹ ظپظٹ ط§ظ„ظ…ط¬ظ…ظˆط¹ط§طھ.\n{ط¥ط¶ط§ظپط©}ط§ظ„طھط­ظƒظ… ط¨ط¬ظˆط¯ط© ط§ط±ط³ط§ظ„ ط§ظ„ظپظٹط¯ظٹظˆ ظ…ظ† ط§ظ„ط§ط¹ط¯ط§ط¯ط§طھ/ط§ظ„طھط®ط²ظٹظ† ظˆط§ظ„ط¨ظٹط§ظ†ط§طھ.\n{ط¥ط¶ط§ظپط©}ط§ظ„ظ‚ط¯ط±ط© ط¹ظ„ظ‰ ظ…ط´ط§ط±ظƒط© طµظˆط± / ظ…ظ‚ط§ط·ط¹ ظپظٹط¯ظٹظˆ / ظ…ظ„ظپط§طھ ظ…طھط¹ط¯ط¯ط© ظپظٹ ظ†ظپط³ ط§ظ„ظˆظ‚طھ ظ…ظ† ط§ظ„ط¯ط±ط¯ط´ط© ط¥ظ„ظ‰ ط§ظ„طھط·ط¨ظٹظ‚ط§طھ ط§ظ„ط®ط§ط±ط¬ظٹط©!.\n{ط¥ط¶ط§ظپط©}ظ†ظ‚ط±ط© ظˆط§ط­ط¯ط© ط¹ظ„ظ‰ ظپظ‚ط§ط¹ط© ط§ظ„ط¯ط±ط¯ط´ط© ظˆطھط¸ظ‡ط± ط®ظٹط§ط±ط§طھ ط³ط±ظٹط¹ط©.\n{ط¥ط¶ط§ظپط©}ط§ط¶ط§ظپط© ط§ظ„ظ„ط؛ط© ط§ظ„ط§ط±ط¯ظٹط© ظ„ظ„ظˆط§طھط³ط§ط¨ ظƒط§ظ…ظ„.\n{ط¥ط¶ط§ظپط©}ط§ط³ظ… ط§ظ„ط­ط²ظ…ط© ط¥ظ„ظ‰ طµظپط­ط© ط§ظ†طھظ‡ط§ط، ط§ظ„طµظ„ط§ط­ظٹط© ظ„ظ…ط³ط§ط¹ط¯ط© ط§ظ„ظ…ط³طھط®ط¯ظ…ظٹظ† ط¹ظ„ظ‰ ظ…ط¹ط±ظپط© ط°ظ„ظƒ..\n{طھط­ط³ظٹظ†}  ظ…ط¸ظ‡ط± ط§ط¶ط§ظپط§طھ ط§ظ„ظˆط§طھط³ط§ط¨ ظ„ط´ظƒظ„ ط¬ظ…ظٹظ„.\n{طھظپط¹ظٹظ„} طھطµظپظٹط© ط§ظ„ط±ط³ط§ط¦ظ„ ط؛ظٹط± ط§ظ„ظ…ظ‚ط±ظˆط،ط© ط¨ط§ط³طھط®ط¯ط§ظ… ط§ظ„ط¨ط­ط«.\n{طھظپط¹ظٹظ„} ظ‚ظ„ظ… ط±ط³ظ… ط¬ط¯ظٹط¯.\n{طھظپط¹ظٹظ„} ط§ظ„ط®طµظˆطµظٹط© ط¹ط¨ط± ط§ظ„ط¥ظ†طھط±ظ†طھ! ظٹظ…ظƒظ†ظƒ ط§ط®طھظٹط§ط± ظ…ظ† ظٹظ…ظƒظ†ظ‡ ط±ط¤ظٹطھظƒ ط¹ظ†ط¯ظ…ط§ طھظƒظˆظ† ظ…طھطµظ„ط§ظ‹ ط¨ط§ظ„ط¥ظ†طھط±ظ†طھ. (ط§ظ„ط¥ط¹ط¯ط§ط¯ط§طھ> ط§ظ„ط­ط³ط§ط¨> ط§ظ„ط®طµظˆطµظٹط©) .\n{طھظپط¹ظٹظ„}  طھط±ظƒ ط§ظ„ظ…ط¬ظ…ظˆط¹ط§طھ ط³ط±ط§ظ‹ ط¯ظˆظ† ظ…ط¹ط±ظپط© ط¬ظ…ظٹط¹ ط§ظ„ط£ط´ط®ط§طµ (ظٹظ…ظƒظ† ظ„ظ„ظ…ط³ط¤ظˆظ„ظٹظ† ظپظ‚ط· ط±ط¤ظٹطھظƒ ط¹ظ†ط¯ ط§ظ„ظ…ط؛ط§ط¯ط±ط©).\n{طھظپط¹ظٹظ„} ظٹظ…ظƒظ† ظ„ظ„ظ…ط³ط¤ظˆظ„ ط§ظ„ظ…ظڈظ…ظƒظ‘ظ† ط¥ط²ط§ظ„ط© ط±ط³ط§ط¦ظ„ ط§ظ„ط£ط´ط®ط§طµ ط§ظ„ط¢ط®ط±ظٹظ† ظپظٹ ط§ظ„ط¯ط±ط¯ط´ط§طھ ط§ظ„ط¬ظ…ط§ط¹ظٹط© (ظٹط¹ظ…ظ„ ظپظ‚ط· ط¹ظ†ط¯ظ…ط§ ظٹظƒظˆظ† ط§ظ„ظ…ط³طھط®ط¯ظ…ظˆظ† ظپظٹ ظ‚ط§ط¹ط¯ط© ط¬ط¯ظٹط¯ط©).\n{طھظپط¹ظٹظ„} ط§ظ„ظ‚ط¯ط±ط© ط¹ظ„ظ‰ ط±ط¤ظٹط© ط§ظ„ظ…ط´ط§ط±ظƒظٹظ† ط§ظ„ط³ط§ط¨ظ‚ظٹظ† ظپظٹ ط§ظ„ظ…ط¬ظ…ظˆط¹ط§طھ (ط§ظ„ط°ظٹظ† ط؛ط§ط¯ط±ظˆط§ ظˆظ…طھظ‰!).\n{طھظپط¹ظٹظ„} ط±ط¯ظˆط¯ ط§ظ„ظپط¹ظ„ ط§ظ„ط³ط±ظٹط¹ط© ط¹ظ„ظ‰ ط§ظ„ط­ط§ظ„ط© .\n{طھظپط¹ظٹظ„} ظˆط§ط¬ظ‡ط© ظ…ط³طھط®ط¯ظ… ط­ط§ظ„ط© ط§ظ„ظ†طµ ط§ظ„ط¬ط¯ظٹط¯.\n{طھظپط¹ظٹظ„} ظˆط§ط¬ظ‡ط© ظ…ط³طھط®ط¯ظ… طھطµظ…ظٹظ… ط®طµظˆطµظٹط© ط§ظ„ط­ط§ظ„ط© ط§ظ„ط¬ط¯ظٹط¯ط© .\n{ط¥طµظ„ط§ط­} ط§ظ†طھظ‚ظ„ ط¥ظ„ظ‰ ط§ظ„ط±ط³ط§ظ„ط© ط§ظ„ط£ظˆظ„ظ‰.\n{ط¥طµظ„ط§ط­} ط¹ط±ط¶ ط¬ظ…ظٹط¹ ط±ط³ط§ط¦ظ„ ط§ظ„ط´ط®طµ ظپظٹ ط§ظ„ط¯ط±ط¯ط´ط© ط§ظ„ط¬ظ…ط§ط¹ظٹط©.\n{ط¥طµظ„ط§ط­} ط¹ط¯ط§ط¯ ط±ط³ط§ط¦ظ„ ط§ظ„ظ…ط¬ظ…ظˆط¹ط© ط§ظ„ط«ط§ط¨طھط© ظپظٹ طµظپط­ط© ظ…ط¹ظ„ظˆظ…ط§طھ ط§ظ„ظ…ط¬ظ…ظˆط¹ط©.\n{ظ…ط²ظٹط¯} ط§ط³طھظ…طھط¹ظˆط§ ظˆط§ظƒطھط´ظپظˆط§ ط§ظ„ط¬ط¯ظٹط¯ ط¨ظ†ظپط³ظƒظ…!.\n' , 'dli':'https://www.whats-plus.net/2022/03/blog-post_18.html'}
+{'ver1':'108', 'ver2':'1', 'ver3':'\n تحديث قاعدة واتساب الى 2.23.1.76[إضافة] حماية عالية للتطبيق من الحظر\n[إضافة] ارسال الصورة بدقة عالية\n[إضافة]تعديل الرسائل المرسله في المحادثات\n[إضافة] تغيير شكل صندوق ارسال رسالة لرقم غير محفوظ\n[إضافة] خيار لاخفاء لاخفاء ايقونة حفظ وايقونة مشاهدة الحالة في صفحة الحالة\n[إضافة] خيار لتغيير الخط من اختيارك من ملفات الهاتف مباشرة\n[إضافة] خيار لاخفاء ✂️ تجزئة الفيديو في صفحة الحالة\n[إضافة]الان المود اصبح يعمل باك اب تلقائي يوميا عن طريق المود\n[إضافة]خيار تشعيل البروكسي للبلدان المحظورة من استعمال الواتساب\n[إضافة] خيار ابقاء الرسالة في المحادثات اثالمفعلة حذف الرسائل تلقائيا (عبر الضغط مطولا على الرسالة المراد حفظها)\n' , 'dli':'https://www.whats-plus.net/2022/03/blog-post_18.html'}
