--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,1 +1,1 @@
-{'ver1':'108', 'ver2':'1', 'ver3':'\n تحديث قاعدة واتساب الى 2.23.1.76[إضافة] حماية عالية للتطبيق من الحظر\n[إضافة] ارسال الصورة بدقة عالية\n[إضافة]تعديل الرسائل المرسله في المحادثات\n[إضافة] تغيير شكل صندوق ارسال رسالة لرقم غير محفوظ\n[إضافة] خيار لاخفاء لاخفاء ايقونة حفظ وايقونة مشاهدة الحالة في صفحة الحالة\n[إضافة] خيار لتغيير الخط من اختيارك من ملفات الهاتف مباشرة\n[إضافة] خيار لاخفاء ✂️ تجزئة الفيديو في صفحة الحالة\n[إضافة]الان المود اصبح يعمل باك اب تلقائي يوميا عن طريق المود\n[إضافة]خيار تشعيل البروكسي للبلدان المحظورة من استعمال الواتساب\n[إضافة] خيار ابقاء الرسالة في المحادثات اثالمفعلة حذف الرسائل تلقائيا (عبر الضغط مطولا على الرسالة المراد حفظها)\n' , 'dli':'https://www.whats-plus.net/2022/03/blog-post_18.html'}
+{'ver1':'109', 'ver2':'1', 'ver3':'\n تحديث قاعد واتساب الى 2.23.9.75حصريا عمل باك اب/استعادة جميع ملفات الواتساب (صور،فيديو، الخ...)\nإضافة اضافة: حزمة ايموجي IOS 2023\nتفعيل تثبيت رسالة في أي محادثه خاصة\nتفعيل الانتقال من ايا هاتف لهاتف اخر عبر تحويل الشات من دون غوغل درايف\nتفعيل تعديل الرسائل\nتفعيل قفل المحادثات التي تمت اضافتها من الشركة\nتفعيل عرض الصورة بجانب الاسم في المجموعات التي تمت اضافتها الشركة\nإصلاح الخطأ عند الضغط على ايقونة المجتمعات\nتحسين بعض الستيلات حتى تعمل مع الاصدار الجديد\nمزيد استمتعوا واكتشفوا الجديد بنفسكم!\n' , 'dli':'https://www.whats-plus.net/2022/03/blog-post_18.html'}
