--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,1 +1,1 @@
-{'ver1':'109', 'ver2':'1', 'ver3':'\n تحديث قاعد واتساب الى 2.23.9.75حصريا عمل باك اب/استعادة جميع ملفات الواتساب (صور،فيديو، الخ...)\nإضافة اضافة: حزمة ايموجي IOS 2023\nتفعيل تثبيت رسالة في أي محادثه خاصة\nتفعيل الانتقال من ايا هاتف لهاتف اخر عبر تحويل الشات من دون غوغل درايف\nتفعيل تعديل الرسائل\nتفعيل قفل المحادثات التي تمت اضافتها من الشركة\nتفعيل عرض الصورة بجانب الاسم في المجموعات التي تمت اضافتها الشركة\nإصلاح الخطأ عند الضغط على ايقونة المجتمعات\nتحسين بعض الستيلات حتى تعمل مع الاصدار الجديد\nمزيد استمتعوا واكتشفوا الجديد بنفسكم!\n' , 'dli':'https://www.whats-plus.net/2022/03/blog-post_18.html'}
+{'ver1':'111', 'ver2':'1', 'ver3':'\n  [ تحديث قاعدة واتساب ] الى 2.23.9.75[إضافة] خيار جديد لإظهار الرسالة المعدلة، قبل وبعد التعديل (إعـدادات بلـس > الخصوصية والقفل).\n[إصلاح] مشكلة ظهور واجهة الإنتهاء عند تفعيل حساب جديد.\n●- [إصلاح] عدم تفعيل الواتساب لمن قد تم حظره سابقاً.\n[إصلاح] المؤثرات في الواتساب.\n●- [إصلاح] ارسال واستقبال الرسائل في بعض الهواتف.\n[إصلاح] مشكله فتح اكثر من محادثة على شكل كارت.\n[إصلاح] إرسال مقاطع الفيديو بحجم كامل.\n [إصلاح] إرسال مقاطع صوتية بحجم كامل.\n[إصلاح] وضع صورة الشخص خلفية للمحادثه.\n [مزيد] إصلاحات وتحسينات أخرى.)\n' , 'dli':'https://www.whats-plus.net/2022/03/blog-post_18.html'}
