--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,1 +1,1 @@
-{'ver1':'110', 'ver2':'1', 'ver3':'\n  [ تحديث قاعدة واتساب ] الى 2.23.9.75[إضافة] خيار جديد لإظهار الرسالة المعدلة، قبل وبعد التعديل (إعـدادات بلـس > الخصوصية والقفل).\n[إصلاح] مشكلة ظهور واجهة الإنتهاء عند تفعيل حساب جديد.\n●- [إصلاح] عدم تفعيل الواتساب لمن قد تم حظره سابقاً.\n[إصلاح] المؤثرات في الواتساب.\n●- [إصلاح] ارسال واستقبال الرسائل في بعض الهواتف.\n[إصلاح] مشكله فتح اكثر من محادثة على شكل كارت.\n[إصلاح] إرسال مقاطع الفيديو بحجم كامل.\n [إصلاح] إرسال مقاطع صوتية بحجم كامل.\n[إصلاح] وضع صورة الشخص خلفية للمحادثه.\n [مزيد] إصلاحات وتحسينات أخرى.)\n' , 'dli':'https://www.whats-plus.net/2022/03/blog-post_18.html'}
+{'ver1':'111', 'ver2':'1', 'ver3':'\n  [ تحديث قاعدة واتساب ] الى 2.23.13.76📌حصريا👻 وضع الشبح {يمكنك إخفاء علامة الصح الثانية ( صحين الاستلام ) دون تأخير وصول الرسائل} الاضافات > الخصوصية والقفل > وضع الشبح..\n📌حصرياإضافة جعل كل الدردشات في قلب المحادثة جعلها مقروءه عند تفعيل خيار الرسائل المقروءه بعد الرد..\n●- ➕إضافةخيار إخفاء سهم الذهاب لأول رسالة وسهم الذهاب لأخر رسالة..\n➕ إضافة العودة للواجهه السابقة للواتساب.\n●- ➕ إضافة ميزة الحفظ لرسائل الفيديو الجديدة.\n✔️ تفعيل يمكنك ارسال فيديو سريع عند الضغط مرة واحدة على زر المايك داخل المحادثة.\n✔️ تفعيل تثبيت الرسالة لمدة 24 ساعة أو 7 أيام أو 30 يومًا.\n ✔️ تفعيل ارسال الصور/الفيديو بدقة عالية.\n✔️ تفعيل مشاركة الحالة على الفايسبوك.\n ⚙️ تحديث اضافة خيار واحد لاخفاء عن سماع التسجيل الصوتي/فيديو مسج\n' , 'dli':'https://www.whats-plus.net/2022/03/blog-post_18.html'}
