--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,1 +1,1 @@
-{'ver1':'111', 'ver2':'1', 'ver3':'\n  [ تحديث قاعدة واتساب ] الى 2.23.13.76📌حصريا👻 وضع الشبح {يمكنك إخفاء علامة الصح الثانية ( صحين الاستلام ) دون تأخير وصول الرسائل} الاضافات > الخصوصية والقفل > وضع الشبح..\n📌حصرياإضافة جعل كل الدردشات في قلب المحادثة جعلها مقروءه عند تفعيل خيار الرسائل المقروءه بعد الرد..\n●- ➕إضافةخيار إخفاء سهم الذهاب لأول رسالة وسهم الذهاب لأخر رسالة..\n➕ إضافة العودة للواجهه السابقة للواتساب.\n●- ➕ إضافة ميزة الحفظ لرسائل الفيديو الجديدة.\n✔️ تفعيل يمكنك ارسال فيديو سريع عند الضغط مرة واحدة على زر المايك داخل المحادثة.\n✔️ تفعيل تثبيت الرسالة لمدة 24 ساعة أو 7 أيام أو 30 يومًا.\n ✔️ تفعيل ارسال الصور/الفيديو بدقة عالية.\n✔️ تفعيل مشاركة الحالة على الفايسبوك.\n ⚙️ تحديث اضافة خيار واحد لاخفاء عن سماع التسجيل الصوتي/فيديو مسج\n' , 'dli':'https://www.whats-plus.net/2022/03/blog-post_18.html'}
+{'ver1':'112', 'ver2':'1', 'ver3':'\n  [تحديث قاعدة واتساب] الى 2.23.21.88.[إضافة] خيار التحميل المنفصل لكل محادثة .\n📌[إضافة] خيار الرجوع الى الواجهة الرئيسية القديمة(إضافات عمر باوزير > الشاشة الرئيسية > البار العلوي - ستايل البار العلوي > Home UI Style).\n●- [إضافة] يمكنك الان ان تقرأ جميع ارشيف الرسائل المعدلة..\n➕ إضافة العودة للواجهه السابقة للواتساب.\n●- [إضافة] يمكنك تفعيل رقم ثاني من نفس النسخة..\n✔️ [تفعيل] شكل الاعدادات الجديد..\n✔️  [تفعيل] انشاء اسم مستعار لك (يجب الانتظار التفعيل الرسمي من السيرفر)..\n [تفعيل] اضافة بريدك الاكتروني لرقم هاتفك..\n✔️ [تفعيل] خيار القبول لدى مشرف المحموعة عند دخول شخص جديد الى المجموعة..\n [تحسين] تم نقل وضع الليل/النهار الى (إضافات عمر باوزير/الثيمات).\n' , 'dli':'https://www.whats-plus.net/2023/11/zemods2024.html'}
