--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,1 +1,1 @@
-{'ver1':'112', 'ver2':'1', 'ver3':'\n  [تحديث قاعدة واتساب] الى 2.23.21.88.[إضافة] خيار التحميل المنفصل لكل محادثة .\n📌[إضافة] خيار الرجوع الى الواجهة الرئيسية القديمة(إضافات عمر باوزير > الشاشة الرئيسية > البار العلوي - ستايل البار العلوي > Home UI Style).\n●- [إضافة] يمكنك الان ان تقرأ جميع ارشيف الرسائل المعدلة..\n➕ إضافة العودة للواجهه السابقة للواتساب.\n●- [إضافة] يمكنك تفعيل رقم ثاني من نفس النسخة..\n✔️ [تفعيل] شكل الاعدادات الجديد..\n✔️  [تفعيل] انشاء اسم مستعار لك (يجب الانتظار التفعيل الرسمي من السيرفر)..\n [تفعيل] اضافة بريدك الاكتروني لرقم هاتفك..\n✔️ [تفعيل] خيار القبول لدى مشرف المحموعة عند دخول شخص جديد الى المجموعة..\n [تحسين] تم نقل وضع الليل/النهار الى (إضافات عمر باوزير/الثيمات).\n' , 'dli':'https://www.whats-plus.net/2023/11/zemods2024.html'}
+{'ver1':'114', 'ver2':'1', 'ver3':'\n  ⚙️ إصلاح النسخ الاحتياطي والاستعادة في إصدارات اندرويد 13 وما فوق⚙️ إصلاح مساحة التخزين في إصدارات اندرويد 14.\n📌⚙️ إصلاح اخطاء مباشرة في بعض الاجهزة.\n●- [⚙️ إصلاح تحميل الثيمات في اصدارات اندرويد 14..\n➕ ⚙️ إصلاح المسافة عند تمرير بعض واجهات المستخدم.\n●- ⚙️ إصلاح البحث في المكالمات..\n✔️ ⚙️ إصلاح التعطل العشوائي لشريط الفقاعة السفلية..\n✔️  ⚙️ إصلاح إصلاحات الأخطاء العامة)..\n [⚙️ مزيد استمتعوا واكتشفوا الجديد بنفسكم!..\n✔️ ⚙️ مزيد إصلاحات وتحسينات أخرى..\n [تحسين] تم نقل وضع الليل/النهار الى (إضافات عمر باوزير/الثيمات).\n' , 'dli':'https://www.whats-plus.net/2023/11/zemods2024.html'}
