--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,1 +1,1 @@
-{'ver1':'114', 'ver2':'1', 'ver3':'\n  ⛏ تحسين زيادة الحماية ضد الحظر!🛡️..\n➕ ⚙️ مزيد إصلاحات وتحسينات أخرى.\n●- ⚙️ إصلاح البحث في المكالمات..\n✔️ ⚙️ إصلاح التعطل العشوائي لشريط الفقاعة السفلية..\n✔️  ⚙️ إصلاح إصلاحات الأخطاء العامة)..\n [⚙️ مزيد استمتعوا واكتشفوا الجديد بنفسكم!..\n✔️ ⚙️ مزيد إصلاحات وتحسينات أخرى..\n [تحسين] تم نقل وضع الليل/النهار الى (إضافات عمر باوزير/الثيمات).\n' , 'dli':'https://www.whats-plus.net/2023/11/zemods2024.html'}
+{'ver1':'115', 'ver2':'1', 'ver3':'\n  ⛏ تحسين زيادة الحماية ضد الحظر!🛡️..\n➕ ⚙️ مزيد إصلاحات وتحسينات أخرى.\n●- ➕ إضافة امكانيه نشر الحالات في الاجهزة المرتبطه...\n✔️ ➕ إضافة امكانيه مشاهده القنوات في الاجهزة المرتبطه...\n✔️  ⚙️ إصلاح إصلاحات الأخطاء العامة)..\n [⚙️ مزيد استمتعوا واكتشفوا الجديد بنفسكم!..\n✔️ ⚙️ مزيد إصلاحات وتحسينات أخرى..\n [تحسين] تم نقل وضع الليل/النهار الى (إضافات عمر باوزير/الثيمات).\n' , 'dli':'https://www.whats-plus.net/2023/11/zemods2024.html'}
