--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,1 +1,1 @@
-{'ver1':'116', 'ver2':'1', 'ver3':'\n  ⛏ تحسين زيادة الحماية ضد الحظر!🛡️..\n➕ ⚙️ مزيد إصلاحات وتحسينات أخرى.\n●- ➕ إضافة امكانيه نشر الحالات في الاجهزة المرتبطه...\n✔️ ➕ إضافة امكانيه مشاهده القنوات في الاجهزة المرتبطه...\n✔️  ⚙️ إصلاح إصلاحات الأخطاء العامة)..\n [⚙️ مزيد استمتعوا واكتشفوا الجديد بنفسكم!..\n✔️ ⚙️ مزيد إصلاحات وتحسينات أخرى..\n [تحسين] تم نقل وضع الليل/النهار الى (إضافات عمر باوزير/الثيمات).\n' , 'dli':'https://www.whats-plus.net/2023/11/zemods2024.html'}
+{'ver1':'117', 'ver2':'1', 'ver3':'\n  ⚙️ إ إضافة الحماية ضد الحظر⚙️تحديث قاعد واتساب الى 2.24.8.86.\n📌⚙️ إ إضافة البحث عن رسالة بتحديد التاريخ.\n●- [⚙️ إإضافة الشكل الجديد للواتساب..\n➕ ⚙️ إتحسين ميزة وضع الشبح.\n●- ⚙️ إ تفعيل المميزات الرسمية للواتساب..\n✔️ ⚙️ إ إصلاح إصلاحات الأخطاء العامة..\n✔️  ⚙️ إصلاح إصلاحات الأخطاء العامة)..\n [⚙️ مزيد استمتعوا واكتشفوا الجديد بنفسكم!..\n✔️ ⚙️ مزيد إصلاحات وتحسينات أخرى..\n [تحسين] تم نقل وضع الليل/النهار الى (إضافات عمر باوزير/الثيمات).\n' , 'dli':'https://www.whats-plus.net/2023/11/zemods2024.html'}
