--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,1 +1,1 @@
-{'ver1':'118', 'ver2':'1', 'ver3':'\n  ⚙️ تمديد عمر اصلاح مشكلة الربط(اذا فشل الربط قم بتغيير مشغل الشبكة الخاص بك)\n📌⚙️ إ إضافة البحث عن رسالة بتحديد التاريخ.\n●- [⚙️ إإضافة الشكل الجديد للواتساب..\n➕ ⚙️ إتحسين ميزة وضع الشبح.\n●- ⚙️ إ تفعيل المميزات الرسمية للواتساب..\n✔️ ⚙️ إ إصلاح إصلاحات الأخطاء العامة..\n✔️  ⚙️ إصلاح إصلاحات الأخطاء العامة)..\n [⚙️ مزيد استمتعوا واكتشفوا الجديد بنفسكم!..\n✔️ ⚙️ مزيد إصلاحات وتحسينات أخرى..\n [تحسين] تم نقل وضع الليل/النهار الى (إضافات عمر باوزير/الثيمات).\n' , 'dli':'https://www.whats-plus.net/2023/11/zemods2024.html'}
+{'ver1':'120', 'ver2':'1', 'ver3':'\n  ⏫ تحديث قاعد واتساب الى 2.24.14.77⚙️  تفعيل ارسال الحالات بجودة عالية.\n📌⚙️  ميزة عمل اعجاب للحالات.\n●- [⚙️ تفعيل ميزة المناسبات في المجموعات..\n➕ ⚙️ تفعيل ميزة الاشخاص القريبون تتيح لك العثور علئ اصدقاء بالقرب منك.\n●- تفعيل ميزة زر انشاء مكالمة جديدة..\n✔️ ⚙️ تفعيل امكانية ارسال جهات اتصال في الاجهزة المرتبطة..\n✔️  ⚙️ اضافة خيار لاخفاء اسماء جهات الاتصال في الشاشه الرئيسية ( الاضافات > الشاشه الرئيسية > الاسطر )..\n [⚙️ ضاقة خيار لتغيير سرفر الثيمات..\n✔️ م تحسين تغيير ايدي الجهاز ليتم تغييره اسبوعياً للمزيد من الحماية..\n اضافة ميزة عدم منع الرسائل المؤقتة).\n' , 'dli':'https://www.whats-plus.net/2023/11/zemods2024.html'}
